# AILogAssistant

./: .env.example  .gitignore  FRONTEND_INSTALL.md  INSTALL.md  README.md  pyproject.toml  requirements.txt  start_backend.py  start_frontend.py
backend/: __init__.py  config.py  embedding_engine.py  file_manager.py  llm_connector.py  log_parser.py  main.py  models.py  models_registry.py  rag_engine.py  retriever.py  session_manager.py  utils.py
data/: config.yaml
frontend/: __init__.py  app.py
frontend/components/: __init__.py  chat_components.py  chat_ui.py  context_viewer.py  sidebar.py
frontend/styles/: __init__.py  theme.py
